# neoqmllsp

./: Cargo.toml  README.md  settings.lua
example/: .gitignore  CMakeLists.txt  meson.build  settings.lua
example/qml/: main.qml  qml.qrc
example/qml/components/: UnitPanel.qml  qmldir
example/qmltypes/: main.cpp
example/src/: MainWindow.cpp  MainWindow.h  main.cpp
example/subprojects/: generate_signals.wrap
misc/: builtins.qmltypes  types.json
src/: ast.rs  complete.rs  cppregister.rs  gammer.rs  gotodef.rs  main.rs  treehelper.rs
src/complete/: qmllibs.rs
src/complete/qmllibs/: pluginsgenerate.rs  qmlenumgenerate.rs  qmlmethodgenerate.rs  qmlparmatergenerate.rs  qmlpropertygenerate.rs  qmlsignalgenerate.rs
test/: Root.qml
