[package]
name = "neoqmllsp"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "The Lsp for cmake"
homepage = "https://github.com/Decodetalkers/neocmakelsp"
authors = ["Decodertalkers <aakari@tutanota.com>"]
keywords = ["lsp"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tower-lsp = "0.19.0"
lsp-types = "0.94.0"
tokio = { version = "1.26.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3.16"
tree-sitter = "0.20.9"
tree-sitter-qmljs = "0.1.2"
regex = "1"
once_cell = "1.17.1"
anyhow = "1.0.70"
clap = "4.1.11"
glob = "0.3.1"
pathdiff = "0.2.1"
